--- a/app/src/main/res/layout/fragment_introduction.xml
+++ b/app/src/main/res/layout/fragment_introduction.xml
@@ -96,6 +96,7 @@
         android:gravity="center" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/start_button"
         android:layout_width="@dimen/smallButtonWidth"
         android:layout_height="@dimen/smallButtonHeight"
         app:layout_constraintTop_toTopOf="@id/small_welcome_text"
