--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/dashboardFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.HomeFragment">
+    tools:context=".ui.home.DashboardFragment">
 
     <TableLayout
         android:id="@+id/table"
@@ -12,7 +14,9 @@
         android:layout_centerInParent="true"
         android:padding="12dp"
         android:stretchColumns="*">
+
         <TableRow>
+
             <TextView
                 style="@style/p"
                 android:text="ID" />
@@ -24,6 +28,7 @@
         </TableRow>
 
         <TableRow>
+
             <TextView
                 style="@style/p"
                 android:text="Name" />
@@ -35,6 +40,7 @@
         </TableRow>
 
         <TableRow>
+
             <TextView
                 style="@style/p"
                 android:text="Supplier" />
@@ -46,7 +52,7 @@
         </TableRow>
     </TableLayout>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_logout"
         style="@style/blueButtonStyle"
         android:layout_width="wrap_content"
@@ -60,6 +66,6 @@
         android:id="@+id/home_progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"/>
+        android:layout_centerInParent="true" />
 
 </RelativeLayout>
