--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -9,17 +9,28 @@
         android:id="@+id/productFragment"
         android:name="com.example.tokoplastik.ui.product.ProductFragment"
         android:label="fragment_product"
-        tools:layout="@layout/fragment_product" />
+        tools:layout="@layout/fragment_product">
+        <action
+            android:id="@+id/action_productFragment_to_productDetailFragment"
+            app:destination="@id/historyFragment" />
+    </fragment>
+
     <fragment
         android:id="@+id/transactionFragment"
         android:name="com.example.tokoplastik.TransactionFragment"
         android:label="fragment_transaction"
         tools:layout="@layout/fragment_transaction" />
+
     <fragment
         android:id="@+id/historyFragment"
         android:name="com.example.tokoplastik.HistoryFragment"
         android:label="fragment_history"
-        tools:layout="@layout/fragment_history" />
+        tools:layout="@layout/fragment_history">
+        <argument
+            android:name="productId"
+            app:argType="integer" />
+    </fragment>
+
     <fragment
         android:id="@+id/dashboardFragment"
         android:name="com.example.tokoplastik.ui.home.DashboardFragment"
