--- a/app/src/main/res/layout/fragment_product.xml
+++ b/app/src/main/res/layout/fragment_product.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.product.ProductFragment">
+    tools:context=".ui.product.ProductFragment"
+    android:id="@+id/layout_product">
 
     <androidx.appcompat.widget.SearchView
         android:id="@+id/searchView"
@@ -15,7 +16,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:iconifiedByDefault="false"
-        app:queryHint="Search products..." />
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        app:queryHint="Cari Nama Produk / Supplier..." />
 
     <ImageButton
         android:id="@+id/btnSortName"
@@ -61,4 +64,16 @@
             android:clipToPadding="false"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_add_product"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="50dp"
+        android:backgroundTint="@color/g_blue"
+        app:tint="@color/white"
+        android:contentDescription="Tambah Produk"
+        android:src="@drawable/ic_add"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
