--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -13,6 +13,10 @@
         <action
             android:id="@+id/action_productFragment_to_productDetailFragment"
             app:destination="@id/detailProductFragment" />
+
+        <action
+            android:id="@+id/action_homeActivity_to_productFragment"
+            app:destination="@id/productFragment" />
     </fragment>
 
     <fragment
