--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -63,7 +63,8 @@
             style="@style/editText"
             android:inputType="textEmailAddress"
             android:hint="E-mail"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:padding="10dp"/>
 
         <EditText
             android:id="@+id/password_text_field"
@@ -75,7 +76,8 @@
             style="@style/editText"
             android:inputType="textPassword"
             android:hint="Password"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            android:padding="10dp"/>
 
         <TextView
             android:id="@+id/forgot_password"
