--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -1,14 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TransactionFragment">
+    tools:context=".ui.transaction.TransactionFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.09" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.91" />
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/guideline3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.09" />
+
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Fragment Transaction" />
+        android:id="@+id/transaction_fragment_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/transaction_fragment_title"
+        android:textSize="@dimen/pTextSize"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toTopOf="@id/guideline3" />
 
-</FrameLayout>
+    <Spinner
+        android:id="@+id/customer_spinner"
+        android:layout_width="250dp"
+        android:layout_height="40dp"
+        android:padding="10dp"
+        android:layout_marginTop="16dp"
+        style="@style/editText"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title" />
+
+    <Button
+        android:id="@+id/button_add_customer"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="16dp"
+        android:text="+"
+        style="@style/blueButtonStyle"
+        app:layout_constraintStart_toEndOf="@id/customer_spinner"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title"/>
+
+    <TextView
+        android:id="@+id/customer_data_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Data Pelanggan"
+        style="@style/h3"
+        app:layout_constraintTop_toBottomOf="@id/customer_spinner"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        android:layout_marginTop="30dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/card_view_customer_data"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@id/guideline"
+        app:layout_constraintTop_toBottomOf="@id/customer_data_title">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="16dp">
+
+            <TextView
+                android:id="@+id/customer_name_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="8dp"
+                android:text="Nama Pelanggan"
+                android:textSize="12sp"/>
+
+            <EditText
+                android:id="@+id/customer_name_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_name_title"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/p_bold"
+                android:inputType="text"
+                android:text="Elham Syahrian putra"
+                tools:ignore="Autofill,LabelFor"/>
+
+            <TextView
+                android:id="@+id/customer_address_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_name_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="Alamat"
+                android:textSize="12sp"/>
+
+            <EditText
+                android:id="@+id/customer_address_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_address_title"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/p_bold"
+                android:inputType="text"
+                android:text="Tenggarong, Kutai Kartanegara"
+                tools:ignore="Autofill,LabelFor"/>
+
+            <TextView
+                android:id="@+id/customer_hp_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_address_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="Nomor HP"
+                android:textSize="12sp"/>
+
+            <EditText
+                android:id="@+id/customer_hp_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_hp_title"
+                app:layout_constraintStart_toStartOf="parent"
+                style="@style/p_bold"
+                android:inputType="text"
+                android:text="Tenggarong, Kutai Kartanegara"
+                tools:ignore="Autofill,LabelFor"/>
+
+            <TextView
+                android:id="@+id/edit_data_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/customer_hp_text"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="20dp"
+                android:text="Terdapat kesalahan data pelanggan?"
+                android:textColor="#ff0000"/>
+
+            <Button
+                android:id="@+id/button_edit_data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/edit_data_title"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
+                style="@style/blueButtonStyle"
+                android:text="Edit"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <Button
+        android:id="@+id/button_to_checkout"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/card_view_customer_data"
+        app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Selanjutnya"
+        style="@style/blueButtonStyle"/>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
