--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -36,15 +36,14 @@
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toTopOf="@id/guideline3" />
 
-    <Spinner
-        android:id="@+id/customer_spinner"
+    <AutoCompleteTextView
+        android:id="@+id/customer_dropdown"
         android:layout_width="250dp"
-        android:layout_height="40dp"
-        android:padding="10dp"
-        android:layout_marginTop="16dp"
-        style="@style/editText"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title"
         app:layout_constraintStart_toStartOf="@id/guideline"
-        app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title" />
+        android:layout_marginTop="16dp"
+        android:hint="Cari Nama Pelanggan" />
 
     <Button
         android:id="@+id/button_add_customer"
@@ -53,7 +52,7 @@
         android:layout_marginTop="16dp"
         android:text="+"
         style="@style/blueButtonStyle"
-        app:layout_constraintStart_toEndOf="@id/customer_spinner"
+        app:layout_constraintStart_toEndOf="@id/customer_dropdown"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/transaction_fragment_title"/>
 
@@ -63,7 +62,7 @@
         android:layout_height="wrap_content"
         android:text="Data Pelanggan"
         style="@style/h3"
-        app:layout_constraintTop_toBottomOf="@id/customer_spinner"
+        app:layout_constraintTop_toBottomOf="@id/customer_dropdown"
         app:layout_constraintStart_toStartOf="@id/guideline"
         android:layout_marginTop="30dp"/>
 
