--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,12 @@
         <item name="android:textSize">@dimen/h3TextSize</item>
     </style>
 
+    <style name="h3_bold">
+        <item name="android:fontFamily">@font/montserrat_bold</item>
+        <item name="android:textColor">@color/g_black</item>
+        <item name="android:textSize">@dimen/h3TextSize</item>
+    </style>
+
     <style name="h4">
         <item name="android:fontFamily">@font/montserrat_regular</item>
         <item name="android:textColor">@color/g_gray700</item>
