--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -2,8 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="4dp"
+    android:layout_marginHorizontal="37dp"
+    android:layout_marginVertical="8dp"
     app:cardCornerRadius="8dp"
     app:cardElevation="2dp">
 
@@ -14,42 +14,33 @@
 
         <TextView
             android:id="@+id/product_text"
-            android:layout_width="120dp"
-            android:layout_height="60dp"
+            android:layout_width="200dp"
+            android:layout_height="40dp"
             android:text="Amplop Paperline Biru Kecil 200/80 blablablalbla blalb albla"
-            android:textSize="10dp"
-            android:maxLines="3"
+            android:textSize="16dp"
+            android:maxLines="2"
             android:ellipsize="end"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintStart_toStartOf="parent"/>
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/priceLayout"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/priceEdit"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
-            android:hint="Price"
             app:layout_constraintEnd_toStartOf="@id/unitsSpinner"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/product_text">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/priceEdit"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
-
-        </com.google.android.material.textfield.TextInputLayout>
+            app:layout_constraintTop_toBottomOf="@id/product_text"
+            android:hint="Harga Produk"
+            android:inputType="numberDecimal"
+            android:textColor="#ec5624"/>
 
         <Spinner
             android:id="@+id/unitsSpinner"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/quantityLayout"
+            app:layout_constraintTop_toBottomOf="@id/product_text"
+            app:layout_constraintStart_toEndOf="@id/priceEdit"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"/>
 
@@ -59,30 +50,30 @@
             android:layout_height="wrap_content"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            app:layout_constraintStart_toEndOf="@id/product_text"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
                 android:id="@+id/btnMinus"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Decrease quantity"
                 android:src="@drawable/ic_remove" />
 
             <TextView
-                android:id="@+id/quantity"
+                android:id="@+id/quantityText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:textSize="16sp"
+                android:textSize="12sp"
                 android:textStyle="bold"
                 android:text="10"/>
 
             <ImageButton
                 android:id="@+id/btnPlus"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+                android:layout_width="15dp"
+                android:layout_height="15dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Increase quantity"
                 android:src="@drawable/ic_add" />
