--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.09" />
+        app:layout_constraintGuide_percent="0.03" />
 
     <TextView
         android:id="@+id/checkout_fragment_title"
@@ -47,36 +47,36 @@
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/checkout_fragment_title" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_add_product"
         style="@style/blueButtonStyle"
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
+        android:padding="10dp"
         android:text="Tambah Keranjang"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
-        app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/product_dropdown" />
 
     <ImageView
         android:id="@+id/cart_image"
-        android:layout_width="@dimen/h2TextSize"
-        android:layout_height="@dimen/h2TextSize"
-        android:layout_marginTop="50dp"
+        android:layout_width="@dimen/h3TextSize"
+        android:layout_height="@dimen/h3TextSize"
+        android:layout_marginTop="20dp"
         android:src="@drawable/ic_cart"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintTop_toBottomOf="@id/button_add_product" />
 
     <TextView
         android:id="@+id/cart_title"
-        style="@style/h4_bold"
+        style="@style/p"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="20dp"
         android:text="Keranjang"
         android:textColor="@color/g_black"
-        android:textSize="@dimen/h3TextSize"
+        android:textSize="@dimen/pTextSize"
         app:layout_constraintStart_toEndOf="@id/cart_image"
         app:layout_constraintTop_toBottomOf="@id/button_add_product" />
 
@@ -86,7 +86,6 @@
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingBottom="16dp"
-        android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/cart_title"
         app:layout_constraintStart_toStartOf="@id/guideline"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
@@ -95,9 +94,9 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/totalCardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="10dp"
+        app:cardElevation="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
@@ -133,18 +132,18 @@
                 android:id="@+id/count_total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Rp. 157.000"
                 app:layout_constraintTop_toBottomOf="@id/total_title"
                 app:layout_constraintStart_toStartOf="@id/guideline4"
                 style="@style/h3_bold"
                 android:textColor="#ec5624" />
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_checkout"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 style="@style/blueButtonStyle"
                 android:text="Checkout"
+                android:padding="10dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline5"/>
 
