--- a/app/src/main/res/layout/fragment_transaction.xml
+++ b/app/src/main/res/layout/fragment_transaction.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="16dp"
         android:hint="Cari Nama Pelanggan" />
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_add_customer"
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -152,7 +152,7 @@
                 android:text="Terdapat kesalahan data pelanggan?"
                 android:textColor="#ff0000"/>
 
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_edit_data"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -165,10 +165,11 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <Button
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_to_checkout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:padding="10dp"
         app:layout_constraintTop_toBottomOf="@id/card_view_customer_data"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
         app:layout_constraintBottom_toBottomOf="parent"
