--- a/app/src/main/res/layout/bottom_sheet_product_sort.xml
+++ b/app/src/main/res/layout/bottom_sheet_product_sort.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     app:layout_behavior="@string/bottom_sheet_behavior"
-    tools:context=".ui.history.SortFilterBottomSheet">
+    tools:context=".ui.product.ProductSortBottomSheet">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Sort &amp; Filter"
+            android:text="Sort Product"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold"/>
@@ -44,16 +44,22 @@
         android:layout_marginStart="15dp">
 
         <RadioButton
-            android:id="@+id/sortByDate"
+            android:id="@+id/sortByName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Tanggal Transaksi"/>
+            android:text="Nama Produk"/>
+
+        <RadioButton
+            android:id="@+id/sortByCapital"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Harga Modal"/>
     </RadioGroup>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Urutkan dari terdahulu"
+        android:text="Urutan"
         android:textSize="18sp"
         android:textColor="@color/black"
         android:layout_marginStart="15dp" />
@@ -65,55 +71,6 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="100dp"
         android:text="Descending Order"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:text="Filter tanggal :"
-        android:textColor="@color/black"
-        android:textSize="18sp" />
-
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/dateRangeButton"
-        style="@style/blueButtonStyle"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Pilih tanggal"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="10dp"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="16dp">
-
-        <EditText
-            android:id="@+id/startDateEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Start Date"
-            android:focusable="false"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="sampai"
-            android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp" />
-
-        <EditText
-            android:id="@+id/endDateEditText"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="End Date"
-            android:focusable="false"/>
-    </LinearLayout>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/doneButton"
