--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -13,10 +13,6 @@
         <action
             android:id="@+id/action_productFragment_to_productDetailFragment"
             app:destination="@id/detailProductFragment" />
-
-        <action
-            android:id="@+id/action_homeActivity_to_productFragment"
-            app:destination="@id/productFragment" />
     </fragment>
 
     <fragment
@@ -41,7 +37,7 @@
     <fragment
         android:id="@+id/detailProductFragment"
         android:name="com.example.tokoplastik.ui.product.ProductDetailFragment"
-        android:label="fragment_detail"
+        android:label="fragment_detail_product"
         tools:layout="@layout/fragment_product_detail">
         <argument
             android:name="productId"
