--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -35,6 +35,14 @@
         android:hint="Harga Modal"
         android:inputType="number" />
 
+    <AutoCompleteTextView
+        android:id="@+id/unit_dropdown"
+        style="@style/editText"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/edit_text_height"
+        android:layout_marginTop="16dp"
+        android:hint="Satuan Terkecil (Cont. pcs, meter)"/>
+
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_add_product"
         android:layout_width="@dimen/medium_button_width"
